# EH-Miner

./: CMakeLists.txt  README.md  bugs.xlsx
clang-ehminer/: CMakeLists.txt
clang-ehminer/src/: DataUtility.cpp  DataUtility.h  FindBranchCall.cpp  FindBranchCall.h  Main.cpp
data/: bugs-kernel.docx
etc/: test.conf
py/: analyzer.py  dummy.py  ehminer.py  glibc_return.csv  main.py
src/: CallGraph.cpp  CallGraph.h  DataUtility.cpp  DataUtility.h  DummyAction.cpp  DummyAction.h  FindBranchCall.cpp  FindBranchCall.h  FindFunctionCall.cpp  FindFunctionCall.h  FindPostbranchCall.cpp  FindPostbranchCall.h  Main.cpp  MiningEngine.cpp  MiningEngine.h
test/: test.conf
test/ftpserver/: bftpd-4.4.tar
